[roles] handle hierarchical roles